--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,12 +5,13 @@
 
 // Required
 $principal: #808080;
-$morado: #751e89;
+$secundario: #666666;
+$morado: #612c80;
 $blanco: #fff;
 $amarillo: #deb330;
 $negro: #000;
-$rojo: #ff0000;
-$fucsia: rgb(220,11,68);
+$rojo: #d20023;
+$fucsia: #d20023;
 $azul: #046aac;
 $celeste: #e6f1f7;
 $oscuro: #4d4d4d;
