--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,11 +6,12 @@
         #menu-principal {
             @include flexible;
             list-style: none;
+            padding: 0;
             li {
                 margin: 0 .5rem;
                 a {
                     @include reset-enlace;
-                    &::hover {color: $azul}
+                    &:hover {color: $azul}
                 }
                 &.current-menu-item {
                     a {color: $azul}
