--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -6,12 +6,12 @@
 }
 @mixin reset-enlace {
     color: $principal;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 700;
     text-decoration: none;
 }
 @mixin seccion-page {
-    padding: 4rem 0;
+    padding: 3rem 0;
 }
 @mixin titulo-seccion {
     font-size: 3rem;
@@ -32,7 +32,8 @@
         }
     
         p {
-            font-size: 1.5rem
+            font-size: 1.6rem;
+            line-height: 1.3;
         }
         img {margin-top: 3rem;}
     }
@@ -42,13 +43,16 @@
     border: none;
     border-radius: 0.5rem;
     color: $blanco;
-    padding: 0.8rem 1rem;
-    font-size: .7em;
+    height: 60px;
+    font-size: 0.8em;
     font-weight: 700;
+    margin: 50px auto;
+    display: inline-block;
+    line-height: 60px;
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
-    width: 270px;
+    width: 274px;
 }
 @mixin arrow-slide {
     height: 50px;
