--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,6 +4,8 @@
     font-size: .85em;
     margin-top: 2rem;
     padding: 1.5rem 0;
+    z-index: 101;
+    position: relative;
     .col-siguenos {
         align-items: baseline;
         display: flex;
@@ -23,6 +25,16 @@
             color: $blanco;
             font-size: 1.2rem;
             margin-left: 1rem;
+            text-decoration: none;
         }
+    }
+    @media (max-width: 1180px) {
+        .widget-footer {
+            margin: .5rem 0;
+            width: 100%;
+            min-width: 100%;
+            text-align: center;
+        }
+        .col-siguenos {justify-content: center;}
     }
 }
