--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -6,12 +6,16 @@
 }
 @mixin reset-enlace {
     color: $principal;
-    font-size: 1rem;
-    font-weight: 700;
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-decoration: none;
     text-decoration: none;
 }
 @mixin seccion-page {
     padding: 3rem 0;
+    @media (max-width: 991px) {
+        padding: 1.3rem 0;
+    }
 }
 @mixin titulo-seccion {
     font-size: 3rem;
@@ -34,6 +38,9 @@
         p {
             font-size: 1.6rem;
             line-height: 1.3;
+            @media(max-width: 991px) {
+                font-size: 1.2rem;
+            }
         }
         img {margin-top: 3rem;}
     }
@@ -44,6 +51,7 @@
     border-radius: 0.5rem;
     color: $blanco;
     height: 60px;
+    font-family: 'Dosis', sans-serif;
     font-size: 0.8em;
     font-weight: 700;
     margin: 50px auto;
@@ -53,6 +61,11 @@
     text-decoration: none;
     text-transform: uppercase;
     width: 274px;
+    transition: .5 all ease-in;
+    &:hover {
+        background: $morado;
+        transition: .5 all ease-in;
+    }
 }
 @mixin arrow-slide {
     height: 50px;
